--- a/src/App.css
+++ b/src/App.css
@@ -1,84 +1,139 @@
-.Item:hover{
-    border-bottom: 2px solid white;
+body {
+  background-image: url(./assets/igre.jpeg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  background-color: black;
 }
 
-.Cards-style{
-    width: 20em;
-    height: 30em;
-    border-radius: 10px;
+* {
+  box-sizing: border-box;
+  margin: 0;
 }
 
-.slider{
-    position: relative;
-    width: 100%;
-    margin: auto;
-    overflow: hidden;
+.Cards-style {
+  width: 20em;
+  height: 30em;
+  border-radius: 10px;
 }
 
-.slider img{
-    width: 100%;
-    display: none;
+.slider {
+  position: relative;
+  width: 100%;
+  margin: auto;
+  overflow: hidden;
 }
 
-img.displaySlide{
-    display: block;
+.slider img {
+  width: 100%;
+  display: none;
 }
 
-*{
-    box-sizing: border-box;
-    margin: 0;
+img.displaySlide {
+  display: block;
 }
 
-.page-container{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.page-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.content{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.content {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .slide-painel {
-    display: flex;
-    align-items: center;
-    overflow-x: scroll;
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
-    border-radius: 10px;
+  display: flex;
+  align-items: center;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  border-radius: 10px;
 }
 
-.prev, .next{
-    width: 4em;
-    height: 2em;
-    cursor: pointer;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    transition: 0.25s;
-    
+.prev,
+.next {
+  width: 4em;
+  height: 2em;
+  cursor: pointer;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  transition: 0.25s;
 }
 
-.prev:hover, .next:hover { transform:scale(1.25) }
-.prev {background-image: url('./assets/al.svg');}
-.next {background-image: url('./assets/ar.svg');}
-
-.itemCar{
-    scroll-snap-align: start;
-    min-width: 100%;
+.prev:hover,
+.next:hover {
+  transform: scale(1.25);
+}
+.prev {
+  background-image: url("./assets/al.svg");
+}
+.next {
+  background-image: url("./assets/ar.svg");
 }
 
-::-webkit-scrollbar{
-    display: none;
+.itemCar {
+  scroll-snap-align: start;
+  min-width: 100%;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
 
-.title{
-    font-weight: 600;
-    font-size: 25px;
+.title {
+  font-weight: 600;
+  font-size: 25px;
+}
+
+.btnDownload {
+  background: rgb(85, 4, 4);
+  background: linear-gradient(
+    90deg,
+    rgba(85, 4, 4, 1) 0%,
+    rgba(108, 15, 4, 1) 23%,
+    rgba(121, 24, 19, 1) 50%,
+    rgba(170, 23, 23, 1) 88%,
+    rgba(190, 19, 19, 1) 100%
+  );
+}
+
+.imgMenu {
+  width: 150px;
+  height: 150px;
+  overflow: hidden;
+  clip-path: circle(30% at);
+  border: 3px solid white;
+  border-radius: 90px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.menuBanner {
+  background: rgb(11, 11, 11);
+  background: linear-gradient(
+    212deg,
+    rgba(11, 11, 11, 1) 0%,
+    rgba(23, 23, 23, 1) 25%,
+    rgba(36, 36, 36, 1) 50%,
+    rgba(23, 23, 23, 1) 75%,
+    rgba(11, 11, 11, 1) 100%
+  );
+}
+
+.bossImg:hover{
+    height: 100px;
+    transition: 1s;
 }
