--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ body {
   height: 150px;
   overflow: hidden;
   clip-path: circle(30% at);
-  border: 3px solid white;
+  border: 3px solid rgb(83, 83, 83);
   border-radius: 90px;
   background-repeat: no-repeat;
   background-position: center;
